fixed clicking off hamburger menu item and also aligned x-icon to the left

--- a/src/NavigationBar/NavBar.css
+++ b/src/NavigationBar/NavBar.css
@@ -51,7 +51,10 @@
         }
 
         .x-icon {
-            transform: scale(1.6);
+            transform: scale(1.7);
+        }
+        .x-position {
+            float: right;
         }
 
     }
